sidebard overlapping bug fixed

--- a/app/public/assets/css/main.css
+++ b/app/public/assets/css/main.css
@@ -63,9 +63,8 @@ html,body,h1 {
 }
 
 #sidebar {
-	margin-right: 10px;
-	position: relative;
-	float: right;
-	z-index: 3000;
+	position: absolute;
+	right: 10px;
+	z-index: 1000;
 }
 
